# noir-profiler

./: .gitignore  Cargo.toml  GITHUB_PUSH_INSTRUCTIONS.md  LICENSE  README.md  np.sh
examples/: Nargo.toml  sample.nr
examples/circuits/: circuit1.json  circuit2.json  complex_crypto.json  mirror_zero.json  repetitive_hashes.json  simple_arithmetic.json  simple_hash.json
src/: analyzer.rs  core.rs  lib.rs  main.rs
